--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,21 +18,18 @@
     <!-- ファビコンの設定 -->
     <link rel="icon" href="../static/images/favicon.ico">
 
-    <title>台形面積ツール</title>
+    <title>読んでミーア！</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="/">台形面積ツール</a>
+            <a href="/"><img src="../static/images/logo.png"></a>
         </div>
 
         <nav class="menu">
             <ul>
-                <li><a href="#">NEWS</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="/input">Search</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +38,7 @@
     {% endblock %}
 <!-------------------->
     <footer>
-        <div class="footer_logo">©︎ GeekSalon_AI_html_cssゼミ</div>
+        <div class="footer_logo" style="text-align: center;">©︎ Ikeda 2023</div>
     </footer>
 </body>
 </html>
