--- a/templates/input.html
+++ b/templates/input.html
@@ -20,8 +20,12 @@
             <div class="example">
                 <h4>例</h4>
                 <p>・悪役令嬢もの</p>
+                <p>・世界征服する</p>
                 <p>・胸キュンする</p>
                 <p>・日常系でほっこりする</p>
+                <p>・エイリアンを倒すヒーロー</p>
+                <p>・家族になる</p>
+                <p>・書店の裏事情</p>
             </div>
             <div class="space"></div>
             <div class="attention">
